# spbook-trader-py

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: match.py
app/services/: data_sources.py  improved_predictor.py  improved_trader.py  predictor.py  stream.py  trader.py
