[project]
name = "sports-simulator"
version = "0.1.0"
description = "Real-time sports betting market simulator"
authors = [
    {name = "Mehmet", email = "mehmet@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.4.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true